--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -14,7 +14,7 @@ phases:
   build:
     commands:
       - echo Build started on `date`
-      - gradlew build
+      - ./gradlew build
       - echo Building the Docker image...
       - docker build -t $REPOSITORY_URI:latest .
       - echo Tagging Docker image...
