--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -5,8 +5,7 @@ phases:
     commands:
       - echo Logging in to Amazon ECR...
       - aws --version
-      - aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws/r6u8g8n9
-      - $(aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws/r6u8g8n9)
+      - docker login --username AWS --p $(aws ecr-public get-login-password --region us-east-1)
       - REPOSITORY_URI=public.ecr.aws/r6u8g8n9/privaclave-container-images
       - CODEBUILD_RESOLVED_SOURCE_VERSION=1.0
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
